[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.22.0"
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread"]}
reqwest = "0.11.23"
zip = "0.6.6"
self-replace = "1.3.7"